--- a/Lab_0/Lab_0.ipynb
+++ b/Lab_0/Lab_0.ipynb
@@ -775,6 +775,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7ffb852d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "matriz = np.empty((3, 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "cell_id": "bb81ac18fd2b41209191bc6227aa819a",
     "deepnote_cell_height": 133,
@@ -784,10 +796,49 @@
    "outputs": [],
    "source": [
     "def es_tachable(lista,i,j):\n",
-    "    if lista[i,j] not empty:\n",
+    "    if not lista[i,j]:\n",
     "        return False\n",
     "    else:\n",
     "        return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "966626cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tachar(lista,v,i,j):\n",
+    "    if es_tachable(i,j) == True:\n",
+    "        lista[i,j] = v\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbeb7e0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "es_tachable(matriz,1,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b36635d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def existe_ganador(lista,i,j):\n",
+    "    try: #no hay ganador\n",
+    "        pass\n",
+    "    except:\n",
+    "        pass"
    ]
   },
   {
