--- a/Lab_0/Lab_0.ipynb
+++ b/Lab_0/Lab_0.ipynb
@@ -914,7 +914,7 @@
   "deepnote_execution_queue": [],
   "deepnote_notebook_id": "6c5a87d7-eaf9-4631-bdfe-1c6590aec534",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.2 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -928,7 +928,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.2"
   },
   "toc": {
    "base_numbering": 1,
@@ -971,6 +971,11 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "32f2fe102a4f10662d8c13f75131e1ba377b7194060421a642fdea27c55fc65a"
+   }
   }
  },
  "nbformat": 4,
