--- a/Lab_3/Laboratorio3_enunciado.ipynb
+++ b/Lab_3/Laboratorio3_enunciado.ipynb
@@ -547,12 +547,12 @@
     "**To-Do**\n",
     "1. [X] Imprimir un mensaje con las dimensiones del Dataframe.\n",
     "2. [X] Imprimir un mensaje con los nombres de las columnas que conforman el DataFrame.\n",
-    "3. [ ] Mostrar los primeros 5, los últimos 5 elementos del DataFrame y realice un muestreo de 5 elementos de forma aleatoria.\n",
-    "4. [ ] Mostrar una descripción rápida de las variables numéricas del DataFrame (utilice un método visto en clases).\n",
-    "5. [ ] Imprimir un mensaje con la cantidad de valores nulos (investigue el método `isna()` y `sum()` de los DataFrames).\n",
-    "6. [ ] Imprimir un mensaje que detalle la cantidad de valores unicos (investigue `nunique()`) .\n",
-    "7. [ ] Imprimir un mensaje con el total de filas que contengan nombres duplicados (investigue `duplicated()` y su parámetro `subset`).\n",
-    "8. [ ] Mostrar las filas que contengan nombres sean duplicados (investigue `duplicated()` y su parámetro `subset`).\n",
+    "3. [X] Mostrar los primeros 5, los últimos 5 elementos del DataFrame y realice un muestreo de 5 elementos de forma aleatoria.\n",
+    "4. [X] Mostrar una descripción rápida de las variables numéricas del DataFrame (utilice un método visto en clases).\n",
+    "5. [X] Imprimir un mensaje con la cantidad de valores nulos (investigue el método `isna()` y `sum()` de los DataFrames).\n",
+    "6. [X] Imprimir un mensaje que detalle la cantidad de valores unicos (investigue `nunique()`) .\n",
+    "7. [X] Imprimir un mensaje con el total de filas que contengan nombres duplicados (investigue `duplicated()` y su parámetro `subset`).\n",
+    "8. [X] Mostrar las filas que contengan nombres sean duplicados (investigue `duplicated()` y su parámetro `subset`).\n",
     "9. [ ] A traves de `.plot.box()` plotear el boxplot de las notas. De ser necesario, invetigue como funcionan los gráficos de caja (esta sección es provista).\n",
     "10. [ ] Finalmente responda la siguiente pregunta:\n",
     "\n",
@@ -594,14 +594,26 @@
     "    return df.columns\n",
     "\n",
     "#sample\n",
-    "def sample_df(df):\n",
-    "    return df.head(),df.tail(),df.sample(5)\n",
+    "def sample_df(df,n):\n",
+    "    return df.head(),df.tail(),df.sample(5,random_state=n)\n",
     "\n",
+    "#descripción\n",
+    "def describe_df(df):\n",
+    "    return df.describe().round(2)\n",
+    "    \n",
     "#nulos totales\n",
     "def nulos_totales(df):\n",
     "    return df.isna().sum()\n",
     "\n",
-    "#"
+    "#valores únicos\n",
+    "def valores_unicos(df):\n",
+    "    return df.nunique()\n",
+    "\n",
+    "#duplicados\n",
+    "def duplicados(df):\n",
+    "    return df.duplicated(subset='names',keep='false')\n",
+    "    \n",
+    "\n"
    ]
   },
   {
