Add names lab 3

--- a/Lab_3/Laboratorio3_enunciado.ipynb
+++ b/Lab_3/Laboratorio3_enunciado.ipynb
@@ -41,8 +41,8 @@
    "source": [
     "### Equipo: SUPER IMPORTANTE - notebooks sin nombre no serán revisados\n",
     "\n",
-    "- Nombre de alumno 1:\n",
-    "- Nombre de alumno 2:\n"
+    "- Nombre de alumno 1: Daniel Carmona G.\n",
+    "- Nombre de alumno 2: Consuelo Rojas N.\n"
    ]
   },
   {
@@ -54,7 +54,7 @@
     "id": "AD-V0bbZzAHr"
    },
    "source": [
-    "### **Link de repositorio de GitHub:** `http://....`"
+    "### **Link de repositorio de GitHub:** `https://github.com/DanielCG19/Evaluaciones-MDS7202`"
    ]
   },
   {
