--- a/Lab_4/Laboratorio4_enunciado.ipynb
+++ b/Lab_4/Laboratorio4_enunciado.ipynb
@@ -31465,7 +31465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "cell_id": "00025-c17b74fb-046b-4c58-a3bf-afdb833874d5",
     "deepnote_cell_height": 2321,
@@ -31501,7 +31501,21 @@
    },
    "source": [
     "```\n",
-    "Escriba aquí su justificación\n",
+    "De los gráficos, se puede notar que las notas de matemáticas tienen una mayor dispersión que las otras dos pruebas. Esta dispersión hace que a media de dicha área sea menor que en los otros casos. Teniendo este valor bajo el 5.0, mientras que en los otros dos, el valor se encuentra más cercano al 5.2\n",
+    "Esto se puede ver claramente en el boxplot, que muestra de manera clara los cuartiles y los valores atípicos.\n",
+    "\n",
+    "Por otro lado, el displot muestra las curvas de densidad de cada prueba, y se puede ver que la de matemáticas es la que tiene una mayor dispersión, esto se distingue en que esta curva es más \"ancha\" que las otras dos.\n",
+    "\n",
+    "Los histogramas, son una buena forma para ver de manera clara la dispersión de los datos y ver los rangos entre los que se encuentran la mayor cantidad de datos. En este caso, este tipo de histogramas, al contener los 3 gráficos en una sola imagen, no deja ver de manera clara los variables de tendencia central, por lo que la adición de los boxplot es necesaria para añadir esta información de manera clara y no generar confusiones.\n",
+    "\n",
+    "Este problema de confusión se soluciona en el histograma con faceta, ya que al separar los datos por prueba, se puede ver de manera clara la distribución de cada una de ellas, y se puede ver que la de matemáticas es la que tiene una mayor dispersión.\n",
+    "\n",
+    "Por lo anterior, los mejores gráficos para mostrar al rector seria el boxplot y el display, esto se debe a que el rector necesita saber a manera global el rendimiento de los alumnos, por lo que un boxplot le da las métricas de tendencia central de manera clara y el display deja ver la dispersión de las pruebas.\n",
+    "\n",
+    "Para el caso de los apoderados, se recomienda el histograma con faceta. Este permite ver las medidas de tendencia central y además ver los rangos entre los que se encuentran las notas. Dado que estos son los apoderados de los alumnos, ellos claramente estan más interesados en ver el rendimiento de su hijo más que el general y este permite manejar los datos de manera más local sin exponer los datos de los demás alumnos.\n",
+    "\n",
+    "Dependiendo el para qué necesita los datos el centro de estudios educativos, es el gráfico que se le mostraría, pero si es una exposición general, un displot es el más adecuado, ya que permite ver la dispersión de los datos y las medidas de tendencia central de manera clara y concisa, sin necesidad de agregar más información.\n",
+    "\n",
     "```"
    ]
   },
@@ -41359,7 +41373,7 @@
   "deepnote_execution_queue": [],
   "deepnote_notebook_id": "18c2abe3-320c-4e68-8df7-7396d3987e46",
   "kernelspec": {
-   "display_name": "Python 3.10.2 64-bit",
+   "display_name": "Python 3.10.6 ('.venv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -41373,7 +41387,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.6"
   },
   "toc": {
    "base_numbering": 1,
@@ -41424,7 +41438,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "32f2fe102a4f10662d8c13f75131e1ba377b7194060421a642fdea27c55fc65a"
+    "hash": "b6e06ab475b91bab0e0c3b49f3d42fe0b80a9e1c830379f3a89ed0000490e9e3"
    }
   }
  },
