--- a/Lab_4/Laboratorio4_enunciado.ipynb
+++ b/Lab_4/Laboratorio4_enunciado.ipynb
@@ -39892,7 +39892,11 @@
    },
    "source": [
     "```\n",
-    "Escriba aqui su respuesta\n",
+    "En general, se puede notar una menor dispersión en los datos a medida que el nivel educacional de los padres va aumentando. Esto se debe a que a mayor nivel educacional hay un menor porcentaje de alumnos, esto hace que el sistema reconozca y ajuste una curva con todos los datos disponibles, no así con los niveles de \"school\" y el grupo D de \"college\" que se ajusta a la curva que mejor describa a la mayoría de los datos, dejando el resto como outliers.\n",
+    "\n",
+    "Sobre las etnias, en general, las medias se mantienen similares independiente de la educación de los padres, con la excepción del grupo E que presenta un aumento considerable de la media en el grupo de postgrado. Lo mismo con el grupo A en postgrado, este presenta un comportamiento anomalo, que se puede deber a la baja cantidad de datos disponibles para este grupo.\n",
+    "\n",
+    "Sobre los gráficos, estos realmente no permiten un análisis sencillo de los datos. En general, los boxplot al no mostrar las zonas de acumulación de los datos se dificulta la interpretación de los mismos. Además, la cantidad de datos que se muestran en el gráfico hace que sea difícil de leer y comparar. Dado que las categorías tanto como etnia y nivel educacional de los padres no estan equilibradas, la conclusiones obtenidas de solo ver los datos se encuentran sesgadas, dado que se toma en cuenta el desempeño de unos pocos (padres con postgrado) con el mismo peso que el de la mayoría (padres con nivel de educación \"school\").\n",
     "```"
    ]
   },
@@ -41277,7 +41281,16 @@
    },
    "source": [
     "```\n",
-    "Escriba aquí su justificación\n",
+    "Primero, notar que el dataset original con la limpieza hecha, tiene 875 filas, mientras que el dataset other_grades.csv tiene 1000 filas. Esto se debe a que el dataset original contiene 125 filas con datos corruptos, que fueron eliminadas en el análisis anterior. Por lo tanto, los joins que resulten con una cantidad de filas superior a 875 significa que estan agregando datos corruptos a los ya limpios. Por ello, los merge del tipo \"right\" y \"outer\" no son los más adecuados.\n",
+    "\n",
+    "Esto se debe a que el \"right join\" lo que hace es que une todos los valores de la lista de la derecha a los de la izquierda. Esto significa, que si hay elementos en la tabla de la derecha que no se encuentran en la derecha, estos igual se agregaran. En el caso de que a esta tabla le falten valores que si se encuentran en la izquierda, estos se obvian. Mientras que con el \"outer join\", une todos los valores de ambas tablas, por lo que si hay valores que no se encuentran en ambas tablas, estos se agregaran con NaN.\n",
+    "\n",
+    "De la misma manera, el \"left join\" trabaja de manera análoga al \"right join\" pero tomando como tabla guía la de la izquieda. En este caso, dado que nuestra tabla guía es la izquierda (df_grades), los valores extras que contenga la tabla de la derecha (other_grades.csv) serán ignorados.\n",
+    "\n",
+    "Para el caso de \"inner join\", este es el complemento de \"outer join\", por lo que solo crea una tabla con la intersección de los datos de ambas tablas, sin importar el orden de ellas. En este caso, dado que la tabla de la derecha (other_grades.csv) contiene datos corruptos, estos no se agregaran a la tabla final.\n",
+    "\n",
+    "Finalmente, en este caso, las mejores opciones son \"left join\" e \"inner join\". Sin embargo, como dice que el orden es relevante y se necesita que los datos nuevos queden a la derecha, el mejor método de agregación es \"left join\".\n",
+    "\n",
     "```"
    ]
   },
