--- a/Lab_4/Laboratorio4_enunciado.ipynb
+++ b/Lab_4/Laboratorio4_enunciado.ipynb
@@ -55,7 +55,7 @@
     "id": "AD-V0bbZzAHr"
    },
    "source": [
-    "### **Link de repositorio de GitHub:** `http://....`"
+    "### **Link de repositorio de GitHub:** `https://github.com/DanielCG19/Evaluaciones-MDS7202/blob/main/Lab_4/Laboratorio4_enunciado_final.ipynb`"
    ]
   },
   {
